2006-04-07  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* src/s3.h:
	Bump to 0.4.1 for Xv changes.

2006-04-07  Aaron Plattner  <aplattner@nvidia.com>

	* src/s3_video.c: (S3PutImage):
	Add a DrawablePtr argument to the XV functions to pave the way for
	redirected video.

2006-04-07  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* src/s3.h:
	* src/s3_IBMRGB.c:
	* src/s3_Ti.c:
	* src/s3_Trio64DAC.c:
	* src/s3_bios.c:
	* src/s3_cursor.c:
	* src/s3_dga.c:
	* src/s3_driver.c:
	* src/s3_video.c:
	Unlibcwrap.  Bump server version requirement.  Bump to 0.4.0.

2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version for X11R7 release.

2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-12-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Remove extraneous AC_MSG_RESULT.

2005-11-29  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Only build dlloader modules by default.

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-11-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update pkgcheck dependencies to work with separate build roots.